NXT-510 Fix spacing issue below the header/hero components

--- a/web/src/components/Storyblok/StoryblokHero/StoryblokHero.module.scss
+++ b/web/src/components/Storyblok/StoryblokHero/StoryblokHero.module.scss
@@ -5,3 +5,8 @@
     width: 66%;
   }
 }
+
+.hero {
+  margin-bottom: 0;
+}
+
